fix overflow and zindex

--- a/Components/B0_TheFirst/TheFirst.module.scss
+++ b/Components/B0_TheFirst/TheFirst.module.scss
@@ -2,6 +2,7 @@
 
 .theFirst {
   @include container;
+  overflow: hidden;
   padding-top: 60px;
 
   @include desktop {
