--- a/Components/B5_TopPlayers/TopPlayers.module.scss
+++ b/Components/B5_TopPlayers/TopPlayers.module.scss
@@ -27,6 +27,7 @@
         border-radius: 15px;
         border: 1px solid rgba(181, 207, 204, 0.17);
         padding: 20px 15px;
+        overflow: hidden;
 
         @include desktop {
           padding: 26px;
